# CapstoneProject

project-rpi/: TCPCLIENT.cpp  TCPSERVER.cpp  math_app.cpp  tcpserver.service
project-rpi/logger/: CMakeLists.txt  app.cpp  daemonlogger.service  simpleLogger.cpp  simpleLogger.h
